# opencv

./: CMakeLists.txt  README.md
src/: Color.py  ColorObjectTracking.py  PuntoFuga.cpp  hello_cv.cpp  main.cpp  main.py  seek.cpp  vp.cpp
